# network_optimization

./: .gitignore  AGENTS.md  AUDIT.md  PLAN.md  README.md  local_search.ipynb  network_optimizer.py  pyproject.toml
data/: synth_members.csv  synth_network.csv  synth_pool.csv  thresholds.json
data/synth/: adequacy_reqs.csv  candidates.csv  members.csv  network.csv  thresholds.json
notebooks/: test_optimizer.ipynb
scripts/: generate_data.py
src/: dev.ipynb  generate_data.ipynb  network_optimizer.py  synthetic_data_generators.py  test_optimizer.ipynb
src/network_optimizer/: __init__.py  __main__.py  adequacy.py  config.py  data.py  distance.py  main.py  ranking.py  scoring.py  search.py
