[project]
name = "network-optimizer"
version = "0.1.0"
description = "Deterministic provider network optimization via local search"
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "scikit-learn>=1.0.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "ipython>=8.0.0",
    "ipykernel>=6.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
run-optimizer = "network_optimizer.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["network_optimizer", "scripts"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
